[package]
name = "solar-expanse-extract"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "parse-locale"
path = "src/bin/parse_locale.rs"

[[bin]]
name = "parse-stats"
path = "src/bin/parse_stats.rs"

[[bin]]
name = "parse-sirenix"
path = "src/bin/parse_sirenix.rs"

[[bin]]
name = "gen-pages"
path = "src/bin/gen_pages.rs"

[[bin]]
name = "extract-icons"
path = "src/bin/extract_icons.rs"

[[bin]]
name = "gen-calculator-data"
path = "src/bin/gen_calculator_data.rs"

[[bin]]
name = "parse-terraformation-config"
path = "src/bin/parse_terraformation_config.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
